--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ section {
 
 .flex {
   display: flex;
-  border: 1px solid gray;
+  border: 1px solid blue;
   gap: 8px;
   padding: 8px;
 }
@@ -59,13 +59,13 @@ section {
 
 .hash_navigation {
   height: 40px;
-  background-color: orangered;
-  padding: 0 25px;
+  background-color: darkcyan;
+  padding: 0 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
 }
 
 .hash_navigation > a {
@@ -76,10 +76,10 @@ section {
 
 .page_navigation {
   width: 100vw;
-  height: 60px;
+  height: 50px;
   background-color: black;
   color: white;
-  padding: 0 25px;
+  padding: 0 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -96,12 +96,13 @@ section {
 
 .page_navigation > menu > a {
   color: white;
-  margin-left: 10px;
+  margin-left: 15px;
   text-decoration: none;
   font-weight: lighter;
 }
 
 .flex_wrap {
+  /* width dari div tetap dipertahankan dan area akan bertambah*/
   flex-wrap: wrap;
 }
 
@@ -176,6 +177,5 @@ section {
 
 .align_baseline {
   height: 300px;
-  align-items:baseline;
+  align-items: baseline;
 }
-
